--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,8 @@
+body {
+  background: url('/assets/fresh_snow.png');
+font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+}
+
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -8,9 +13,17 @@
   margin-top: 10px;
   margin-bottom: 15px;
   padding: 20px;
+  box-shadow: 1px 1px 3px red;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
 }
+
+.navbar.navbar-inverse {
+  background:url('/assets/footer_lodyas.png');
+  border-radius: 0;
+  box-shadow: 0px 2px 5px red; 
+}
+
