--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -27,3 +27,9 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0px 2px 5px red; 
 }
 
+.navbar-inverse .navbar-brand {
+  color: red;
+  font-family: 'exoregular', sans-serif;
+  font-size: 33px;
+  letter-spacing: 1.5px;
+}
