--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,9 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
+            <li><%= link_to 'Log Out', destroy_user_session_path, :method => :delete %></li>
           <% else %>
-            <li><%= link_to 'Sign In', new_user_session_path %></li>
+            <li><%= link_to 'Log In', new_user_session_path %></li>
             <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <% end %>
           <li><a href="#">Link</a></li>
