Allow only user who created place edit/update

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar.navbar-inverse {
-  background-color: navy;
+  background-color: url('/assets/footer_lodyas.png');
   border-radius: 0;
   box-shadow: 0px 2px 5px red; 
 }
