--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -38,6 +38,16 @@
 			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => 'btn btn-danger' %>
 		<% end %>
 	</div>
+
+<h1>Photos</h1>
+<% @place.photos.each do |photo| %>
+	<div>
+		<%= image_tag photo.picture %><br/>
+		<%= photo.caption %>
+	</div>
+<% end %>
+
+
 </div>
 
 <div class="clear"></div>
@@ -86,8 +96,12 @@
 	</div>
 <% end %>
 
-
-
+<div class="clear"></div>
+<%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+	<%= f.input :picture %>
+	<%= f.input :caption %>
+	<%= f.submit "Add a Photo", :class => 'btn btn-primary' %> 
+<% end %> 
 
 
 
