--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,13 +39,43 @@
 		<% end %>
 	</div>
 
-<h1>Photos</h1>
+<div class="col-xs-10 col-xs-offset-1">
+	<h1 class="pull-left">Photos</h1>
+	<!-- Button trigger modal -->
+	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+	  Add a Photo
+	</button>
+</div>
+
 <% @place.photos.each do |photo| %>
 	<div>
 		<%= image_tag photo.picture %><br/>
 		<%= photo.caption %>
 	</div>
 <% end %>
+
+<!-- Photo Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add a photo</h4>
+      </div>
+      <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+      	<div class="modal-body">
+					<%= f.input :picture %>
+					<%= f.input :caption %>
+				</div>
+     		<div class="modal-footer">
+        	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
+      	</div>
+			<% end %>
+    </div>
+  </div>
+</div>
+
 
 
 </div>
@@ -95,15 +125,6 @@
 		</blockquote>
 	</div>
 <% end %>
-
-<div class="clear"></div>
-<%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
-	<%= f.input :picture %>
-	<%= f.input :caption %>
-	<%= f.submit "Add a Photo", :class => 'btn btn-primary' %> 
-<% end %> 
-
-
 
 
 
