--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,7 +42,7 @@
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="pull-left">Photos</h1>
 	<!-- Button trigger modal -->
-	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal-photora">
 	  Add a Photo
 	</button>
 </div>
@@ -55,7 +55,7 @@
 <% end %>
 
 <!-- Photo Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal-photo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
