Design the slider

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,13 +8,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'empty_restaurant.jpg' %>
+      <%= image_tag 'empty_restaurant.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best places hole-in-the-wall restaurants
       </div>
     </div>
      <div class="item">
-    		<%= image_tag 'dinner-on-table.jpg' %>
+    		<%= image_tag 'dinner-on-table.jpg', :class => 'img-responsive' %>
     	<div class="carousel-caption">
       	Looking for hotdogs?
     	</div>
