--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -24,7 +24,8 @@ h1, h2, h3, h4, h5, h6 {
 .navbar.navbar-inverse {
   background-color: url('/assets/footer_lodyas.png');
   border-radius: 0;
-  box-shadow: 0px 2px 5px red; 
+  box-shadow: 0px 2px 5px red;
+  margin-bottom: 0;  
 }
 
 .navbar-inverse .navbar-brand {
@@ -66,4 +67,28 @@ blockquote:before {
 }
 blockquote p {
   display: inline;
+}
+
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+  height: 600px;
+  width: 100%; 
+  margin-right: auto;
+  margin-left: auto; 
+}
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100; 
+  text-shadow: rgba(250,0,0,0.95) 2px 2px;
+  background-color: rgba(0,0,0,0.4);
+  width: 100%; 
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
