Change user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,3 +26,11 @@
 			</blockquote>
 		</div>
 <% end %> 
+
+<div class="clear"></div>
+
+<h2 class="text-center">My Places</h2>
+
+<% @user.places.each do |place| %>
+	<%= place.inspect %>
+<% end %> 
