--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,7 +10,7 @@
     <div class="item active">
       <%= image_tag 'empty_restaurant.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
-        Find the best places hole-in-the-wall restaurants
+        Find the best hole-in-the-wall restaurants
       </div>
     </div>
      <div class="item">
@@ -29,6 +29,8 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
+
+<br/><br />
 
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1">
