--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,8 +1,25 @@
+<br /><br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
+
+	<div class="pull-right">
+		<% if current_user && current_user == @place.user %>
+			<%= link_to 'Edit', edit_place_path(@place), :class => "action-button animate blue" %>
+			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => "action-button animate red" %>
+		<% end %>
+	</div>
+
 	<h1><%= @place.name %></h1>
 	<i><%= @place.address %></i>
+
+
 	<br/><br/>
+
+
 	<p><%= @place.description %></p>
+
+
+
+	<br />
 
 	<% if @place.latitude.present? && @place.longitude.present? %>
 
@@ -32,17 +49,11 @@
 
 	<br />
 
-	<div class="pull-right">
-		<% if current_user && current_user == @place.user %>
-			<%= link_to 'Edit', edit_place_path(@place), :class => 'btn btn-primary' %>
-			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => 'btn btn-danger' %>
-		<% end %>
-	</div>
 
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="pull-left">Photos</h1>
 	<!-- Button trigger modal -->
-	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal-photora">
+	<button class="action-button animate blue btn-lg pull-right" data-toggle="modal" data-target="#myModal-photora">
 	  Add a Photo
 	</button>
 </div>
@@ -107,8 +118,8 @@
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="pull-left">Comments</h1>
 	<!-- Button trigger modal -->
-	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
-	  Add a comment
+	<button class="action-button animate blue pull-right" data-toggle="modal" data-target="#myModal">
+	  Add a Comment
 	</button>
 </div>
 
