--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -16,7 +16,7 @@
      <div class="item">
     		<%= image_tag 'dinner-on-table.jpg', :class => 'img-responsive' %>
     	<div class="carousel-caption">
-      	Looking for hotdogs?
+      	Got Grub?
     	</div>
   	</div> 	
   </div>
@@ -48,7 +48,7 @@
 			    <% if place.comments.last.humanized_rating.present? %>
 			      <b><%= place.comments.last.humanized_rating %></b> -
 			    <% end %>
-			    <%= place.comments.last.message %>
+			    <div class="comment"><%= place.comments.last.message %></div>
 			    <small><%= place.comments.last.user.email %></small>
 			  </blockquote>
 			</div>
