--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -61,7 +61,7 @@
 <% @place.photos.each do |photo| %>
 	<div>
 		<%= image_tag photo.picture %><br/>
-		<%= photo.caption %>
+		<div class="comment"><%= photo.caption %></div>
 	</div>
 <% end %>
 
@@ -129,10 +129,10 @@
 	<div class="col-xs-12 col-sm-6">
 		<blockquote>
 			<% if comment.humanized_rating.present? %>
-			<b><%= comment.humanized_rating %></b> - 
+			<b class=><%= comment.humanized_rating %></b> - 
 			<% end %>
-			<%= comment.message %> 
-			<small><%= comment.user.email %></small>
+			<div class="comment"><%= comment.message %></div> 
+			<small class=><%= comment.user.email %></small>
 		</blockquote>
 	</div>
 <% end %>
