--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -102,56 +102,11 @@ blockquote p {
 }
 
 
-
-/* For the button */
-.animate
-{
-  transition: all 0.1s;
-  -webkit-transition: all 0.1s;
-}
-
-.action-button
-{
-  position: relative;
-  padding: 10px 10px;
-  margin: 0px 10px 10px 0px;
-  float: left;
-  border-radius: 8px;
-  font-family: 'Josefin Sans', 'sans-serif';
-  font-size: 20px;
-  color: #FFF;
-  text-decoration: none;  
-}
-
-.red
-{
-  background-color: #E74C3C;
-  border-bottom: 5px solid #BD3E31;
-  text-shadow: 0px -2px #BD3E31;
-}
-
-.blue
-{
-  background-color: #3498DB;
-  border-bottom: 5px solid #2980B9;
-  text-shadow: 0px -2px #2980B9;
-}
-
-.yellow
-{
-  background-color: #F2CF66;
-  border-bottom: 5px solid #D1B358;
-  text-shadow: 0px -2px #D1B358;
-}
-
-.action-button:active
-{
-  transform: translate(0px,5px);
-  -webkit-transform: translate(0px,5px);
-  border-bottom: 1px solid;
-}
-
 .comment {
   font-family: 'Shadows Into Light', cursive;
   font-size: 20px; 
+}
+
+.pagination {
+  margin: 10px;
 }
