--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -32,6 +32,10 @@
 
 <br/><br />
 
+<div class="pagination pull-right">
+  <%= paginate @places %> 
+</div>
+
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1">
 		<h1><%= link_to place.name, place_path(place) %></h1><br />
@@ -54,4 +58,8 @@
 			</div>
 		<% end %>
 	</div>
-<% end %> 
+<% end %>
+
+<div class="pagination pull-right">
+  <%= paginate @places %> 
+</div>
