--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,8 +3,8 @@
 
 	<div class="pull-right">
 		<% if current_user && current_user == @place.user %>
-			<%= link_to 'Edit', edit_place_path(@place), :class => "action-button animate blue" %>
-			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => "action-button animate red" %>
+			<%= link_to 'Edit', edit_place_path(@place), :class => 'btn btn-primary' %>
+			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'}, :class => 'btn btn-danger' %>
 		<% end %>
 	</div>
 
@@ -53,7 +53,7 @@
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="pull-left">Photos</h1>
 	<!-- Button trigger modal -->
-	<button class="action-button animate blue btn-lg pull-right" data-toggle="modal" data-target="#myModal-photora">
+	<button class="btn btn-primary pull-right" data-toggle="modal" data-target="#myModal-photora">
 	  Add a Photo
 	</button>
 </div>
@@ -118,7 +118,7 @@
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="pull-left">Comments</h1>
 	<!-- Button trigger modal -->
-	<button class="action-button animate blue pull-right" data-toggle="modal" data-target="#myModal">
+	<button class="btn btn-primary pull-right" data-toggle="modal" data-target="#myModal">
 	  Add a Comment
 	</button>
 </div>
