--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	</div>
 
 	<div class="col-xs-8">
-		<h1><%= @user.email %></h1>
+		<h1><%= @user.email %></h1><br />
 		<h3>Member since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
 		<h4><%= @user.comments.count %> total comments</h4>
 		<h4><%= @user.comments.where(:rating => '5_stars').count %> total 5 star reviews</h4>
