--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -25,6 +25,12 @@ font-size: 20px;
   box-shadow: 1px 1px 3px red;
 }
 
+.booyah-box h1 { 
+  font-size: 25px;
+  word-wrap: break-word;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
@@ -110,3 +116,16 @@ blockquote p {
 .pagination {
   margin: 10px;
 }
+
+@media screen and (min-width: 768px) {
+  .booyah-box h1 { 
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .booyah-box h1 { 
+    font-size: 36px;
+  }
+}
+
